feat: release v3.0.0 stable